[project]
name = "hb-base"
version = "0.1.0"
description = "HuanBei base library - shared utilities and common code"
requires-python = ">=3.12, <3.13"
license = "MIT"
authors = [
  { name = "huanbei" },
]
dependencies = [
  "pydantic==2.11.7",
  "pydantic-settings==2.8.1",
  "loguru==0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hb_base"]
# 确保 .pyi 存根文件包含在 wheel 中
artifacts = ["*.pyi"]

[dependency-groups]
dev = [
  "cython>=3.0.0",
  "pytest~=8.3.5",
  "pytest-asyncio~=0.25.3",
  "ruff==0.14.8",
  "pyright==1.1.407",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
